Layout jump fix.
Closes #193.

--- a/dev/css/picard.css
+++ b/dev/css/picard.css
@@ -7,7 +7,7 @@
  * @docs https://github.com/mhulse/picard
  * @copyright Copyright (c) 2014 Micky Hulse.
  * @version 1.1.0
- * @date 2014/03/05
+ * @date 2014/03/06
  */
 
 
@@ -773,6 +773,11 @@ figure .scroll {
   font-weight: normal;
   content: attr(data-icon);
   speak: none;
+}
+
+html,
+body {
+  overflow-x: hidden;
 }
 
 html {
