--- a/source/files/styles/partials/_base.scss
+++ b/source/files/styles/partials/_base.scss
@@ -1,3 +1,6 @@
+html,
+body { overflow-x: hidden; } // https://github.com/mhulse/picard/issues/193
+
 html {
 	height: 100%;
 	overflow-y: scroll;
